# cpp-batteries

./: CMakeLists.txt  README.md
cpp-batteries/: FileHelper.cpp  FileHelper.h  StringHelper.cpp  StringHelper.h  gtest_supp.h
test/: testStringHelper.cpp
